--- a/index.html
+++ b/index.html
@@ -1,5 +1,62 @@
+<!DOCTYPE html>
 <html>
-<h2>hola</h2>
-<h6>hola</h6>
-</html>
+    <head>
+    <title>Javascript</title>
+        <meta http-equiv="content-type" content="text/html; 
+charset=utf-8" />
+        <link rel="stylesheet" href="style.css" type="text/css"/>   
+    </head>
+    <body>
 
+        <form onsubmit="return validarFormulario()" >
+            <table align="center">
+                <tr>
+                    <td>Nombre de usuario</td>
+                    <td><input type="text" id="user" /></td>
+                    <td ><canvas id="errorUsuario" ></canvas></td>
+                </tr>
+                <tr>
+                    <td>Apellido/s</td>
+                    <td><input type="text" id="last" /></td>
+                    <td><canvas id="errorApellido" ></canvas></td>
+                </tr>
+                <tr>    
+                    <td>Sexo</td>
+                    <td>
+                        <select id="option" >
+                            <option value="" 
+selected="selected">seleccione</option>
+                            <option>Masculino</option>
+                            <option>femenino</option>
+                        </select>
+                    </td>
+                    <td id="opciones"><canvas 
+id="errorOpciones"></canvas></td>
+                <tr>
+                <td>Edad </td>
+                    <td><input type="text" id="edad" /></td>
+                    <td><canvas id="errorEdad" ></canvas></td>
+                <tr>    
+                    <td>Domicilio</td>
+                    <td><input type="text" id="domicilio" /></td>
+                    <td><canvas id=""></canvas></td>
+                </tr>
+                <tr>
+                    <td>Nacionalidad</td>
+                    <td><input type="text" id="nacionalidad" /></td>
+                    <td><canvas id=""></canvas></td>
+                </tr>
+                <tr>
+                    <td>Telefono</td>
+                    <td><input type="text" id="phone" /></td>
+                    <td><canvas id=""></canvas></td>
+                </tr>
+                <tr>
+                    <td><input type="submit" id="submit" 
+value="enviar"></td>
+                </tr>
+            </table>
+        </form>
+	</body>   
+</html>
+<script type='text/javascript' src="java.js"></script>
